[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydalybms"
version = "0.1.0"
description = "Python library for communicating with Daly BMS over UART/RS-485"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.hatch.version]
path = "pydalybms/__init__.py"
