[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydalybms"
dynamic = ["version"]
authors = [
    {name = "Alexey Matveev"},
]
description = "Python library for communicating with Daly BMS over UART/RS-485"
requires-python = ">=3.10"
dependencies = [
    "pyserial>=3.5",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.hatch.version]
path = "pydalybms/__init__.py"


[tool.hatch.build.targets.sdist]
include = ["pydalybms"]

[tool.hatch.build.targets.wheel]
packages = ["pydalybms"]
